6.0 (#21)
* random number limits was missing

* Fix debug toggle on remote panel

* Added detection of supported audio types before attempting to load file
Changed audio file existance check to use HTTP HEAD requests
Added web console output when unsupported video format is used for gif-alert
Added show-debug=true query param for showing basic debugging on-screen for alerts
Fixed timing for gif/video with audio alerts
Added support for using aac and ogg audio files with gif-alerts
closes gmt2001/PhantomBot-1#5
closes gmt2001/PhantomBot-1#93

* Fixed Exception in roleManager stopping processing of further users

* Added ability to have a blank default value with (n)

* Fixed potential Path Traversal via command/script

* Block (repeat) from having an n < 1

* Fixed (team_random_member) and (team_url) ReferenceError

* New documentation tags for transformers
Minor code style fixes

* Added ability to specify multiple users with (useronly)

* Updated command tags to use caching when appropriate

* Added toc functionality to guides
Added Jump to Top button to guides
Added anchors to header tags in guides
Added ability to use hash fragment jumpto=anchor to scroll to a header on guide load

* Fixed some documentation typos
Added notes about team parameters for command tags

* Restored correct functionality of (touser)

* Fix documentation typo

* Add examples to documentation comments

* Start auto-transformer documentation script

* More work on auto-transformer documentation

* Fix typo

* Added basic streamlabs setup wizard

* Print full exception to debug

* Fix path check error

* Fix error output

* Restored correct functionality of (pointtouser)

* Restored ability to have no space after comma for backwards-compatibility of (#) and (repeat)
Fixed (followage), (followdate), (hours), (points), (price), (pay) not properly falling back when used with arguments, if the sender does not provide the arguments
Ad